--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: 	papayawhip">
 	<div style="text-align: center">
-		<img src="E:\Web Design Course\Assignments\Day 1\Photos/Nishat.jpg"; width="180px"; style="border-radius: 50px">
+		<img src="Photos/Nishat.jpg"; width="180px"; style="border-radius: 50px">
 	</div>
 	<hr>
 	<div style="background-color: turquoise; height: 100px;
@@ -22,9 +22,9 @@
 
 	 <div style="text-align: center">
 	 	<a target="_Blank" href="https://www.google.com">
-	 	<img src="E:\Web Design Course\Assignments\Day 1\Photos/call.png"; style="width: 30px; border-radius: 60px"> <a/>
+	 	<img src="Photos/call.png"; style="width: 30px; border-radius: 60px"> <a/>
 	 	<a target="_Blank" href="https://accounts.google.com">
-	 	<img src="E:\Web Design Course\Assignments\Day 1\Photos/gmail.png"; style="width: 30px; border-radius: 60px"> </a>
+	 	<img src="Photos/gmail.png"; style="width: 30px; border-radius: 60px"> </a>
 	 </div>
 
 	<br>
